--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
     <header>
-        <a href="./index.html"><span>WEB</span>STUDIO</a>
         <nav>
+            <a href="./index.html">WEBSTUDIO</a>
+
             <ul>
                 <li>
                     <a href="">Studio</a>
@@ -23,18 +24,26 @@
                 </li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+
+        <address>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
     </header>
 
     <main>
         <!-- hero -->
         <section>
             <h1>
-                Effective Solutions<br />
-                for Your Business
+                Effective Solutions for Your Business
             </h1>
-            <button type="button">Order service</button>
+            <button type="button">Order Service</button>
 
         </section>
         <!-- benefits -->
@@ -83,7 +92,7 @@
                     <img src="./images/mobiles_img.jpg" alt="desktop pc" width="360" height="300" />
                 </li>
                 <li>
-                    <img src="./images/mob_and_desk_img.png" alt="desktop pc" width="360" height="300" />
+                    <img src="./images/mob_and_desk.jpg" alt="desktop pc" width="360" height="300" />
                 </li>
             </ul>
         </section>
