--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
 
             <ul>
                 <li>
@@ -99,11 +99,11 @@
 
         <!-- Our team-->
         <section>
-            <h2>Our team</h2>
+            <h2>Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/marc_guerrero_img.jpg" alt="photo of Marc Guerrero " width="264" height="260" />
-                    <h3>Marc Guerrero</h3>
+                    <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
